<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.main.auth.AuthActivity"
    android:background="@color/raspberry"
    android:layoutDirection="rtl">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline1"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="56dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping_was_never_this_easy"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline4"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shopping"
            android:layout_gravity="center"
            android:importantForAccessibility="no" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_up"
            android:layout_marginTop="56dp"
            style="@style/full_width_secondary_button"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.BodyMedium"
                android:textColor="@color/white"
                android:text="@string/already_have_an_account"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="16dp"
                />

            <TextView
                android:id="@+id/btn_log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.BodyLarge"
                android:textColor="@color/white"
                android:text="@string/log_in_underlined"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                />

        </LinearLayout>


    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view_auth"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        />




</androidx.coordinatorlayout.widget.CoordinatorLayout>